# play-with-pydantic2

./: README.md  alembic.ini  pyproject.toml
.devcontainer/: devcontainer.json
alembic/: env.py
alembic/versions/: 47d415c8894f_first_migration.py
app/: main.py
app/apis/: author.py  book.py
app/models/: book.py  models.py  pagination.py
app/models/sqlalchemy/: __init__.py  models.py
app/repositories/: author.py  base.py  book.py  utils.py
app/services/: author.py  base.py
app/utils/: config.py  db.py
config/: dev.env
